--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -427,7 +427,7 @@
     <string name="lbl_table_of_content_entry">İçindekiler Tablosuna Giriş</string>
     <string name="lbl_test_connection">Bağlantıyı test edin</string>
     <string name="lbl_timeouts">zaman aşımları</string>
-    <string name="lbl_title">Kitap adı</string>
+    <string name="lbl_title">Başlık</string>
     <string name="lbl_unread">Okunmamış</string>
     <string name="lbl_date_last_updated_day">Günü güncelle</string>
     <string name="lbl_date_last_updated_month">Ayı güncelle</string>
@@ -716,6 +716,7 @@
     <string name="ps_show_titles_reordered_off">Kapalı</string>
     <!-- NOT APPLICABLE FOR BOOKS IN TURKISH. A single vertical bar character. -->
     <string name="pv_reformat_titles_prefixes">"|"</string>
+    <string name="lbl_titles">Başlıklar</string>
     <string name="lbl_original_title">Orijinal başlık</string>
     <string name="lbl_original_title_long">Bu kitap bir çeviriyse orijinal adı</string>
     <string name="error_site_access_blocked">Web sitesi tarafından erişim engellendi.</string>
