--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -572,12 +572,12 @@
     <string name="pt_search_reformat_color">Estandarizar nombres de «color de libro»</string>
     <string name="pt_search_reformat_format">Estandarizar nombres de «formato de libro»</string>
     <string name="pt_search_uses_publisher">Búsqueda utiliza editor</string>
-    <string name="pt_author_name_formatting">Formato de nombre de autor</string>
+    <string name="X_pt_author_name_formatting">Formato de nombre de autor</string>
     <string name="pt_show_title_reordered">Mostrar títulos como…</string>
     <string name="ps_show_titles_reordered_off">El título</string>
     <string name="error_type_not_supported">Tipo no soportado: %1$s …</string>
     <string name="ps_show_titles_reordered_on">título, El</string>
-    <string name="pt_sort_author_name_given_first">Clasificación del nombre del autor</string>
+    <string name="X_pt_sort_author_name_given_first">Clasificación del nombre del autor</string>
     <string name="pt_sort_title_reordered">Ordenar títulos por</string>
     <string name="pt_cover_undo_enabled">Deshacer operaciones en portadas de libros</string>
     <string name="ps_cover_undo_disabled">Una edición/reemplazo de portada no se puede deshacer (utiliza menos espacio de almacenamiento)</string>
@@ -588,8 +588,8 @@
     <string name="pt_ui_system_locale">Idioma del sistema</string>
     <string name="pt_ui_theme">El tema</string>
     <string name="pt_website_search_order_and_enable">Prioridad, habilitar y deshabilitar</string>
-    <string name="ps_author_name_example_family_first">por ejemplo «Pérez Galdós, Benito»</string>
-    <string name="ps_author_name_example_given_first">por ejemplo «Benito Pérez Galdós»</string>
+    <string name="ps_show_author_name_family_first">Mostrar primero el apellido.\\npor ejemplo «Pérez Galdós, Benito»</string>
+    <string name="ps_show_author_name_given_first">Mostrar primero los apellidos.\\npor ejemplo «Benito Pérez Galdós»</string>
     <string name="ps_bob_books_under_multiple_each_author">Bajo cada autorр</string>
     <string name="ps_bob_books_under_multiple_each_publisher">debajo de cada editor</string>
     <string name="ps_bob_books_under_multiple_each_series">Bajo cada serie</string>
@@ -762,4 +762,6 @@
     <string name="lbl_certificate_validity_period">Validez: %1$s - %2$s</string>
     <string name="lbl_reading">Leyendo</string>
     <string name="action_edit_defaults">Editar la configuración predeterminada</string>
+    <string name="ps_sort_author_name_given_first">Ordenar primero por los apellidos.\\npor ejemplo «Benito Pérez Galdós»</string>
+    <string name="ps_sort_author_name_family_first">Ordenar primero por apellido.\\npor ejemplo «Pérez Galdós, Benito»</string>
 </resources>
