--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -561,12 +561,12 @@
     <string name="pt_search_reformat_color">Standardizzare i nomi di «colore del libro»</string>
     <string name="pt_search_reformat_format">Standardizzare i nomi di «formato libro»</string>
     <string name="pt_search_uses_publisher">La ricerca utilizza editore</string>
-    <string name="pt_author_name_formatting">Formattazione del nome dell’autore</string>
+    <string name="X_pt_author_name_formatting">Formattazione del nome dell’autore</string>
     <string name="pt_show_title_reordered">Mostra titoli come…</string>
     <string name="ps_show_titles_reordered_off">Il titolo</string>
     <string name="error_type_not_supported">Tipo non supportato: %1$s …</string>
     <string name="ps_show_titles_reordered_on">titolo, Il</string>
-    <string name="pt_sort_author_name_given_first">Ordinamento dei nomi degli autori</string>
+    <string name="X_pt_sort_author_name_given_first">Ordinamento dei nomi degli autori</string>
     <string name="pt_sort_title_reordered">Ordina titoli per</string>
     <string name="pt_cover_undo_enabled">Annullare le operazioni sulle copertine dei libri</string>
     <string name="ps_cover_undo_disabled">Una modifica/sostituzione della copertina non può essere annullata (utilizza meno memoria)</string>
@@ -577,8 +577,8 @@
     <string name="pt_ui_system_locale">Lingua di sistema</string>
     <string name="pt_ui_theme">Tema</string>
     <string name="pt_website_search_order_and_enable">Priorità, abilita e disabilita</string>
-    <string name="ps_author_name_example_family_first">es. «Alighieri, Dante»</string>
-    <string name="ps_author_name_example_given_first">es. «Dante Alighieri»</string>
+    <string name="ps_show_author_name_family_first">Visualizzare prima il nome della famiglia.\\nes. «Alighieri, Dante»</string>
+    <string name="ps_show_author_name_given_first">Visualizzare prima i nomi.\\nes. «Dante Alighieri»</string>
     <string name="ps_bob_books_under_multiple_each_author">Sotto ciascuno autore</string>
     <string name="ps_bob_books_under_multiple_each_publisher">sotto ciascun editore</string>
     <string name="ps_bob_books_under_multiple_each_series">Sotto ciascuno serie</string>
@@ -752,4 +752,6 @@
     <string name="lbl_certificate_validity_period">Validità: %1$s - %2$s</string>
     <string name="lbl_reading">In lettura</string>
     <string name="action_edit_defaults">Modifica delle impostazioni predefinite</string>
+    <string name="ps_sort_author_name_given_first">Ordinamento in base ai nomi.\\nes. «Dante Alighieri»</string>
+    <string name="ps_sort_author_name_family_first">Ordinamento in base al nome della famiglia.\\nes. «Alighieri, Dante»</string>
 </resources>
