--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -558,8 +558,8 @@
     <string name="progress_msg_x_updated">%1$d bijgewerkt</string>
     <string name="progress_msg_x_skipped">%1$d overgeslagen</string>
     <string name="progress_msg_x_deleted">%1$d verwijderd</string>
-    <string name="ps_author_name_example_family_first">bvb. „Reve, Gerard”</string>
-    <string name="ps_author_name_example_given_first">bvb. „Gerard Reve”</string>
+    <string name="ps_show_author_name_family_first">Weergeven met de achternaam eerst.\\nbvb. „Reve, Gerard”</string>
+    <string name="ps_show_author_name_given_first">Weergeven met de voornamen eerst.\\nbvb. „Gerard Reve”</string>
     <string name="ps_bob_books_under_multiple_each_author">Onder elke auteur</string>
     <string name="ps_bob_books_under_multiple_each_publisher">onder elke uitgever</string>
     <string name="ps_bob_books_under_multiple_each_series">Onder elke reeks</string>
@@ -601,9 +601,9 @@
     <string name="pt_search_reformat_format">Standaardiseer namen van „boekformaten”</string>
     <string name="pt_search_resolve_authors_bedetheque">Los auteursnamen op met behulp van de Bedetheque-website</string>
     <string name="pt_search_uses_publisher">Zoeken maakt gebruik van de uitgever</string>
-    <string name="pt_author_name_formatting">Opmaak van auteursnamen</string>
+    <string name="X_pt_author_name_formatting">Opmaak van auteursnamen</string>
     <string name="pt_show_title_reordered">Toon titels als…</string>
-    <string name="pt_sort_author_name_given_first">Sorteren op auteursnaam</string>
+    <string name="X_pt_sort_author_name_given_first">Sorteren op auteursnaam</string>
     <string name="pt_sort_title_reordered">Sorteer titels op</string>
     <string name="pt_storage_volume">Opslagvolume</string>
     <string name="pt_cover_undo_enabled">Bewerkingen op boekomslagen ongedaan maken</string>
@@ -748,4 +748,8 @@
     <string name="lbl_certificate_validity_period">Geldigheid: %1$s - %2$s</string>
     <string name="lbl_reading">Aan het lezen</string>
     <string name="action_edit_defaults">Standaardinstellingen bewerken</string>
+    <string name="ps_publisher_name_example">bvb. „Bezige Bi, Dej”</string>
+    <string name="ps_publisher_name_example_reordered">bvb. „De Bezige Bij”</string>
+    <string name="ps_sort_author_name_given_first">Sorteer eerst op de voornamen.\\nbvb. „Gerard Reve”</string>
+    <string name="ps_sort_author_name_family_first">Sorteer eerst op de achternaam.\\nbvb. „Reve, Gerard”</string>
 </resources>
