--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -220,4 +220,8 @@
     <string name="lbl_certificate_validity_period">Tính hợp lệ: %1$s - %2$s</string>
     <string name="lbl_reading">Đang đọc</string>
     <string name="action_edit_defaults">Chỉnh sửa cài đặt mặc định</string>
+    <string name="ps_show_author_name_given_first">Hiển thị với tên đã cho trước.\nví dụ. “Nhat Hanh, Thich”</string>
+    <string name="ps_show_author_name_family_first">Hiển thị với tên gia đình đầu tiên.\nví dụ. \“Thich Nhat Hanh”</string>
+    <string name="ps_sort_author_name_given_first">Sắp xếp theo tên đã cho trước.ví dụ.\n “Nhat Hanh, Thich”</string>
+    <string name="ps_sort_author_name_family_first">Sắp xếp theo họ trước.\nví dụ. “Thich Nhat Hanh”</string>
 </resources>
